# sparc-py

./: README.md  pyproject.toml  requirements.txt  server.py  sparc_realtime.py
static/: app.js  index.html  visualization.js
